--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test:e2e:install": "playwright install chromium"
   },
   "dependencies": {
-    "@sentry/nextjs": "^10.39.0",
     "@types/leaflet": "^1.9.21",
     "@vercel/analytics": "^1.6.1",
     "chart.js": "^4.5.1",
@@ -23,14 +22,15 @@
     "react": "^18",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^9.39.3",
     "eslint-config-next": "^15.5.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
